crates/oxc_react_compiler/tests/snapshots/for-of-conditional-break.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/for-of-conditional-break.js
---
import { c as _c } from "react/compiler-runtime";
function Component() {
	const $ = _c(1);
	let x;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		x = [];
		for (const item of [1, 2]) {
			if (item === 1) {
				break;
			}
			x.push(item);
		}
		$[0] = x;
	} else {
		x = $[0];
	}
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [],
	isComponent: false
};
