crates/oxc_react_compiler/tests/snapshots/for-of-continue.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/for-of-continue.js
---
import { c as _c } from "react/compiler-runtime";
function Component() {
	const $ = _c(1);
	let ret;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		const x = [
			0,
			1,
			2,
			3
		];
		ret = [];
		for (const item of x) {
			if (item === 0) {
				continue;
			}
			ret.push(item / 2);
		}
		$[0] = ret;
	} else {
		ret = $[0];
	}
	return ret;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [],
	isComponent: false
};
