crates/oxc_react_compiler/tests/snapshots/for-of-iterator-of-immutable-collection.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/for-of-iterator-of-immutable-collection.js
---
import { c as _c } from "react/compiler-runtime";
function Router(t0) {
	const $ = _c(3);
	const { title, mapping } = t0;
	let array;
	if ($[0] !== mapping || $[1] !== title) {
		array = [];
		for (const entry of mapping.values()) {
			array.push([title, entry]);
		}
		$[0] = mapping;
		$[1] = title;
		$[2] = array;
	} else {
		array = $[2];
	}
	return array;
}
const routes = new Map([["about", "/about"], ["contact", "/contact"]]);
export const FIXTURE_ENTRYPOINT = {
	fn: Router,
	params: [],
	sequentialRenders: [{
		title: "Foo",
		mapping: routes
	}, {
		title: "Bar",
		mapping: routes
	}]
};
