crates/oxc_react_compiler/tests/snapshots/for-of-mutate-item-of-local-collection.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/for-of-mutate-item-of-local-collection.js
---
import { c as _c } from "react/compiler-runtime";
import { makeObject_Primitives } from "shared-runtime";
function Component(props) {
	const $ = _c(1);
	let items;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		items = [makeObject_Primitives(), makeObject_Primitives()];
		for (const x of items) {
			x.a = x.a + 1;
		}
		$[0] = items;
	} else {
		items = $[0];
	}
	return items;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{}],
	sequentialRenders: [
		{},
		{},
		{}
	]
};
