crates/oxc_react_compiler/tests/snapshots/for-of-simple.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/for-of-simple.js
---
import { c as _c } from "react/compiler-runtime";
function Component() {
	const $ = _c(1);
	let x;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		x = [];
		const items = [
			0,
			1,
			2
		];
		for (const ii of items) {
			x.push(ii * 2);
		}
		$[0] = x;
	} else {
		x = $[0];
	}
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [],
	isComponent: false
};
