crates/oxc_react_compiler/tests/snapshots/for-return.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/for-return.js
---
function Component(props) {
	for (const i = 0; 0 < props.count;) {
		return;
	}
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
