crates/oxc_react_compiler/tests/snapshots/for-with-assignment-as-update.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/for-with-assignment-as-update.js
---
import { c as _c } from "react/compiler-runtime";
function Component(props) {
	const $ = _c(2);
	let x = props.init;
	for (let i = 0; i < 100; i = i + 1) {
		x = x + i;
	}
	let t0;
	if ($[0] !== x) {
		t0 = [x];
		$[0] = x;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	return t0;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ init: 0 }]
};
