crates/oxc_react_compiler/tests/snapshots/foreach-result-ignores-callback-return.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/foreach-result-ignores-callback-return.jsx
---
import { c as _c } from "react/compiler-runtime";
function Component() {
	const $ = _c(1);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		let count = 0;
		const value = [1].forEach(() => () => count++);
		t0 = <div>{value}</div>;
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
}
